Update README with JVM args and optimization tips
Added JVM arguments and optimization notes for better performance.