@@ -2,3 +2,22 @@
 The Minecraft modpack zalithium which was previously available on the repo landroid has been remaigined and shifted to a new repo with way better fps and stability.
 
 I have posted this mod on github as it contains curseforge and modrinth mods if anyone whises to post this elsewhere just link the github or at least credit the creator mertufg.
+
+
+Jvm args
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseCompactObjectHeaders
+-XX:+TieredCompilation
+-XX:ReservedCodeCacheSize=192m
+-XX:CompileThreshold=100
+-XX:+UseG1GC
+-XX:MaxGCPauseMillis=20
+-XX:G1HeapRegionSize=8m
+-XX:G1NewSizePercent=30
+-XX:G1MaxNewSizePercent=40
+-XX:G1MixedGCCountTarget=4
+-XX:InitiatingHeapOccupancyPercent=15
+-XX:+UseStringDeduplication
+
+Note use Cds and shared code soaces for the extreme fps optimization which gives way more fos but reqires prior setup
+for this search on google or use ai as it is trivial just rember that the filepath of the jsa has to specified.
